--- a/development.ini
+++ b/development.ini
@@ -17,7 +17,7 @@ mako.directories = docforge:templates
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
-debugtoolbar.hosts = 127.0.0.1 ::1 10.0.8.6 10.0.8.100
+debugtoolbar.hosts = 127.0.0.1 ::1 10.0.8.6 10.0.8.100 91.216.25.216
 
 ###
 # wsgi server configuration
