--- a/development.ini
+++ b/development.ini
@@ -17,7 +17,7 @@ mako.directories = docforge:templates
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
-debugtoolbar.hosts = 127.0.0.1 ::1 10.0.8.6 10.0.8.100 91.216.25.216
+debugtoolbar.hosts = 127.0.0.1 ::1 10.0.8.6 10.0.8.100 91.216.25.216 89.174.74.67
 
 ###
 # wsgi server configuration
@@ -26,7 +26,7 @@ debugtoolbar.hosts = 127.0.0.1 ::1 10.0.8.6 10.0.8.100 91.216.25.216
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 9933
 
 ###
 # logging configuration
